<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/email"
        android:layout_width="145dp"
        android:layout_height="36dp"
        android:text="@string/enter_email"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="159dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <TextView
        android:id="@+id/password"
        android:layout_width="154dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/enter_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterEmail"

        />

    <EditText
        android:id="@+id/enterPass"
        android:layout_width="155dp"
        android:layout_height="53dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"

        />

    <Button
        android:id = "@+id/login"
        android:layout_width="107dp"
        android:layout_height="64dp"
        android:text="@string/login"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/enterPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

         />

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:text="@string/don_t_have_an_account"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

      />

    <TextView
        android:id = "@+id/signUp"
        android:layout_width="67dp"
        android:layout_height="33dp"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/noAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

       />

</androidx.constraintlayout.widget.ConstraintLayout>